--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <div class="wrapper">
-    <header class="header">
-        <div class="header__container">
+    <header id="open" class="header">
+        <div id="close" class="header__container">
             <a href="" class="header__logo">
                 <img class="header__logo_desktop" src="img/logo.svg" alt="logo">
                 <img class="header__logo_mobile" src="img/logo_mobile.svg" alt="logo">
@@ -31,7 +31,8 @@
             </div>
             <div class="header__button">
                 <a href="" class="button button_blue">DOWNLOAD</a>
-                <a href="#menu" class="icon-menu"><span></span></a>
+                <a href="#open" class="icon-menu"><span></span></a>
+                <a href="#close" class="close-icon-menu"></a>
             </div>
         </div>
     </header>
