--- a/index.html
+++ b/index.html
@@ -90,11 +90,106 @@
                     </div>
                 </div>
             </div>
-
+        </section>
+        <section class="experts">
+            <div class="experts__container">
+                <div class="experts__statistic statistic-experts">
+                    <div class="statistic-experts__body body-statistic-experts">
+                        <div class="body-statistics-experts__item">
+                            <div class="body-statistics-experts__value">2m</div>
+                            <div class="body-statistics-experts__text">Users</div>
+                        </div>
+                        <div class="body-statistics-experts__item">
+                            <div class="body-statistics-experts__value">78</div>
+                            <div class="body-statistics-experts__text">Countries</div>
+                        </div>
+                        <div class="body-statistics-experts__item">
+                            <div class="body-statistics-experts__value">10,000+</div>
+                            <div class="body-statistics-experts__text">Medical experts</div>
+                        </div>
+                    </div>
+                    <div class="statistic-experts__decor statistic-experts__decor_1"></div>
+                    <div class="statistic-experts__decor statistic-experts__decor_2"></div>
+                    <div class="statistic-experts__decor statistic-experts__decor_3"></div>
+                </div>
+                <div class="experts__body">
+                    <div class="experts__content">
+                        <div class="experts__block-text block-text">
+                            <h2 class="block-text__title block-text__title_blue">
+                                Talk to <span>experts.</span>
+                            </h2>
+                            <div class="block-text__text">Book appointments or submit queries into thousands of forums
+                                concerning health issues and prevention against noval Corona Virus.
+                            </div>
+                            <a href="" class="block-text__button button">FEATURES</a>
+                        </div>
+                    </div>
+                    <div class="experts__video">
+                        <iframe src="https://www.youtube.com/embed/sohdv21BVNI" title="YouTube video player"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="healthcare">
+            <div class="healthcare__container">
+                <div class="healthcare__block-text block-text block-text_center">
+                    <h2 class="block-text__title">
+                        <span>Healthcare</span> at your Fingertips.
+                    </h2>
+                    <div class="block-text__text block-text__text_mw">Bringing premium healthcare features to your
+                        fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be
+                        a part of the new health culture
+                    </div>
+                </div>
+                <div class="healthcare__items">
+                    <div class="healthcare__column healthcare__column_1">
+                        <div class="healthcare__item item-healthcare">
+                            <div class="item-healthcare__icon">
+                                <img src="img/healthcare/3.svg" alt="icon">
+                            </div>
+                            <div class="item-healthcare__title">Symptom Checker</div>
+                            <div class="item-healthcare__text">Check if you are infected by COVID-19 with our Symptom
+                                Checker
+                            </div>
+                        </div>
+                    </div>
+                    <div class="healthcare__column healthcare__column_2">
+                        <div class="healthcare__item item-healthcare">
+                            <div class="item-healthcare__icon">
+                                <img src="img/healthcare/2.svg" alt="icon">
+                            </div>
+                            <div class="item-healthcare__title">24x7 Medical support</div>
+                            <div class="item-healthcare__text">Consult with 10,000+ health workers about your concerns.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="healthcare__column healthcare__column_3">
+                        <div class="healthcare__item item-healthcare">
+                            <div class="item-healthcare__icon">
+                                <img src="img/healthcare/1.svg" alt="icon">
+                            </div>
+                            <div class="item-healthcare__title">Conditions</div>
+                            <div class="item-healthcare__text">Bringing premium healthcare features to your fingertips.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        Footer
+        <div class="footer__container">
+            <div class="footer__items">
+                <a href="" class="footer__item">
+                    <img src="img/go.svg" alt="market">
+                </a>
+                <a href="" class="footer__item">
+                    <img src="img/ap.svg" alt="market">
+                </a>
+            </div>
+        </div>
     </footer>
 </div>
 </body>
