--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                         </div>
                     </div>
                     <div class="experts__video">
-                        <iframe src="https://www.youtube.com/embed/sohdv21BVNI" title="YouTube video player"
+                        <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/KR4ifeGxdQw?si=QOUDmee0NdfDKztq"
+                                title="YouTube video player"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen></iframe>
                     </div>
